--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -14,7 +14,9 @@ jobs:
       - uses: actions/checkout@v4
       - name: Update README links
         run: |
-          sed -i -E "s|(https://github.com/woonstadrotterdam/woningwaardering/)(tree|blob)/main/|\1\2/${GITHUB_REF_NAME}/|g" README.md
+          REF="${GITHUB_REF_NAME}"
+          # Use '@' as the delimiter for the 's' command
+          sed -i -E "s@(https://github.com/woonstadrotterdam/woningwaardering/)(tree|blob)/main/@\\1\\2/${REF}/@g" README.md
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -61,7 +63,9 @@ jobs:
           git checkout -b "$BRANCH_NAME"
           git rm --cached .github/workflows/*
           # Replace `/tree/main/` or `/blob/main/` with `/tree/{REF}/` or `/blob/{REF}/`
-          sed -i -E "s|(https://github.com/woonstadrotterdam/woningwaardering/)(tree|blob)/main/|\1\2/${GITHUB_REF_NAME}/|g" README.md
+          REF="${GITHUB_REF_NAME}"
+          # Use '@' as the delimiter for the 's' command
+          sed -i -E "s@(https://github.com/woonstadrotterdam/woningwaardering/)(tree|blob)/main/@\\1\\2/${REF}/@g" README.md
           git add README.md
           git commit -m "Exclude workflows from release branch and update README links"
           git push origin "$BRANCH_NAME"
