--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Update README links
         run: |
           # Replace /tree/main/ and /blob/main/ with /tree/{VERSION}/ and /blob/{VERSION}/ respectively
-          sed -i -E 's|(@https://github.com/woonstadrotterdam/woningwaardering/)([^/]+/)?main/|\\1\\2'"${{ github.ref_name }}"'/|g' README.md
+          sed -i -E "s@(https://github.com/woonstadrotterdam/woningwaardering/)(tree|blob)/main/@\\1\\2/${GITHUB_REF_NAME}/@g" README.md
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -83,8 +83,9 @@ jobs:
           BRANCH_NAME="release/${GITHUB_REF_NAME}"
           git checkout -b "$BRANCH_NAME"
           git rm --cached .github/workflows/*
-          git commit -m "Exclude workflows from release branch"
-
+          sed -i -E "s@(https://github.com/woonstadrotterdam/woningwaardering/)(tree|blob)/main/@\\1\\2/${GITHUB_REF_NAME}/@g" README.md
+          git add README.md
+          git commit -m "Exclude workflows from release branch and update README links"
           git push origin "$BRANCH_NAME"
 
   publish-to-pypi:
