gebruik monumenten package i.p.v. losse queries

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ dependencies = [
     "prettytable==3.*",
     "pandas==2.*",
     "requests==2.*",
-    "SPARQLWrapper==2.*",
+    "monumenten==0.2.*",
 ]
 
 [project.urls]
