--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,7 @@ test = [
 ]
 dev = [
     "woningwaardering[test]",
+    "woningwaardering[monumenten]",
     "datamodel-code-generator[http]==0.25.6",
     "unidecode==1.*",
     "jinja2==3.*",
