--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ Issues = "https://github.com/woonstadrotterdam/woningwaardering/issues"
 
 [tool.woningwaardering.datasources]
 referentiedata = "02eee3c2de6c05ec2661c0b4b7659c21d0727b1a"
+vera-openapi = "v4.1.5"
 
 [tool.setuptools.packages.find]
 include = ["woningwaardering*"]
@@ -76,6 +77,7 @@ dev = [
     "libcst==1.*",
     "requests==2.31.*",
     "inquirer==3.*",
+    "tomli==2.*",
 ]
 monumenten = [
     "monumenten==0.2.*"
