--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ exclude: (wettelijke-documenten|docs)
 repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
     # Ruff version.
-    rev: v0.3.4
+    rev: v0.5.3
     hooks:
       - id: ruff
         types_or: [python, pyi, jupyter]
@@ -52,19 +52,23 @@ repos:
     hooks:
       - id: mypy
         additional_dependencies:
-          [
-            pydantic==2.*,
-            types-requests==2.*,
-            unidecode==1.*,
-            PyYAML==6.*,
-            types-pyyaml==6.*,
-            libcst==1.*,
-            types-python-dateutil==2.*,
-            "rdflib==7.*",
-          ]
+          - "aiohttp==3.*"
+          - "datamodel-code-generator==0.25.6"
+          - "jinja2==3.*"
+          - "libcst==1.*"
+          - "loguru==0.7.*"
+          - "monumenten"
+          - "pandas-stubs==2.*"
+          - "prettytable==3.*"
+          - "pydantic==2.*"
+          - "rdflib==7.*"
+          - "tomli==2.*"
+          - "types-python-dateutil==2.*"
+          - "types-pyyaml==6.*"
+          - "types-requests==2.*"
+          - "unidecode==1.*"
         description: "Mypy is an optional static type checker for Python."
-        args:
-          ["--strict", "--ignore-missing-imports", "--allow-untyped-decorators"]
+        args: ["--strict", "--allow-untyped-decorators"]
         exclude: "tests"
         stages:
           - "pre-push"
