--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,13 +60,14 @@ omit = [
 [project.optional-dependencies]
 test = [
     "pre-commit==3.3.*",
-    "ruff==0.3.*",
+    "ruff==0.5.*",
     "pytest==8.*",
     "pytest-cov==5.*",
     "types-requests==2.*",
     "types-python-dateutil==2.*",
 ]
 dev = [
+    "aiohttp==3.*",
     "woningwaardering[test]",
     "woningwaardering[monumenten]",
     "datamodel-code-generator[http]==0.25.6",
