--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,8 +5,6 @@ repo_url: https://github.com/woonstadrotterdam/woningwaardering
 
 theme:
   name: material
-  titles_only: false
-  collapse_navigation: true
   language: nl
   features:
   - content.code.copy
@@ -17,6 +15,8 @@ theme:
   - navigation.tabs.scrollable
   - navigation.tabs.sticky
   - navigation.top
+  - search.suggest
+  - search.highlight
 
 
 markdown_extensions:
