--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,16 +7,39 @@ theme:
   name: material
   language: nl
   features:
-  - content.code.copy
-  - navigation.expand
-  - navigation.instant
-  - navigation.sections
-  - navigation.tabs
-  - navigation.tabs.scrollable
-  - navigation.tabs.sticky
-  - navigation.top
-  - search.suggest
-  - search.highlight
+    - content.code.copy
+    - navigation.expand
+    - navigation.indexes
+    - navigation.instant
+    - navigation.sections
+    - navigation.tabs
+    - navigation.tabs.scrollable
+    - navigation.tabs.sticky
+    - navigation.top
+    - navigation.tracking
+    - search.share
+    - search.suggest
+    - search.highlight
+    - toc.follow
+  palette:
+    - media: "(prefers-color-scheme)"
+      toggle:
+        icon: material/link
+        name: Switch to light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      primary: indigo
+      accent: indigo
+      toggle:
+        icon: material/toggle-switch
+        name: Switch to dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      primary: black
+      accent: indigo
+      toggle:
+        icon: material/toggle-switch-off
+        name: Switch to system preference
 
 
 markdown_extensions:
