--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,6 @@
 site_name: Woningwaardering
 site_author: Tomer Gabay, Ben Verhees, Tiddo Loos
+site_url: https://woningwaardering.readthedocs.io
 copyright: "2025, Woonstad Rotterdam"
 repo_url: https://github.com/woonstadrotterdam/woningwaardering
 
