--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,7 +52,9 @@ markdown_extensions:
       alternate_style: true
   - pymdownx.highlight:
       use_pygments: true
+      pygments_lang_class: true
   - pymdownx.superfences
+  - pymdownx.inlinehilite
   - pymdownx.tilde
 
 plugins:
