--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,21 +52,21 @@ repos:
     hooks:
       - id: mypy
         additional_dependencies:
-          - "aiohttp==3.*"
-          - "datamodel-code-generator==0.25.6"
-          - "jinja2==3.*"
-          - "libcst==1.*"
-          - "loguru==0.7.*"
-          - "monumenten"
-          - "pandas-stubs==2.*"
-          - "prettytable==3.*"
-          - "pydantic==2.*"
-          - "rdflib==7.*"
-          - "tomli==2.*"
-          - "types-python-dateutil==2.*"
-          - "types-pyyaml==6.*"
-          - "types-requests==2.*"
-          - "unidecode==1.*"
+          - "aiohttp>=3.11"
+          - "datamodel-code-generator>=0.25.6"
+          - "jinja2>=3.1"
+          - "libcst>=1.5"
+          - "loguru>=0.7"
+          - "monumenten>=0.2"
+          - "pandas-stubs>=2.0"
+          - "prettytable>=3.12"
+          - "pydantic>=2.10"
+          - "rdflib>=7.0"
+          - "tomli>=2.2"
+          - "types-python-dateutil>=2.9"
+          - "types-pyyaml>=6.0"
+          - "types-requests>=2.32"
+          - "unidecode>=1.3"
         description: "Mypy is an optional static type checker for Python."
         args: ["--strict", "--allow-untyped-decorators"]
         exclude: "tests"
