--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,7 +73,7 @@ dev = [
     "datamodel-code-generator[http]>=0.25.6",
     "unidecode>=1.3",
     "jinja2>=3.1",
-    "libcst>=1.5",
+    "libcst==1.4", # tijdelijk, tot release libcst>1.7.0: https://github.com/Instagram/LibCST/pull/1316
     "requests>=2.31",
     "inquirer>=3.4",
     "tomli>=2.2",
