--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -55,7 +55,7 @@ repos:
           - "aiohttp>=3.11"
           - "datamodel-code-generator>=0.25.6"
           - "jinja2>=3.1"
-          - "libcst>=1.5"
+          - "libcst==1.4" # tijdelijk, tot release libcst>1.7.0: https://github.com/Instagram/LibCST/pull/1316
           - "loguru>=0.7"
           - "monumenten>=0.3"
           - "pandas-stubs>=2.0"
