--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,6 +44,7 @@ theme:
 
 
 markdown_extensions:
+  - footnotes
   - github-callouts
   - markdown.extensions.codehilite
   - markdown.extensions.extra
