--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -1,5 +1,9 @@
 name: Publish Python distribution
 run-name: Publish release ${{ github.ref_name }}
+
+permissions:
+  contents: read
+
 on:
   push:
     tags:
