--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -2,6 +2,7 @@ name: CICD
 
 permissions:
   contents: read
+  pull-requests: write
 
 on:
   workflow_dispatch:
@@ -48,7 +49,15 @@ jobs:
         run: pre-commit run --all-files --hook-stage pre-push
 
       - name: Run pytest
-        run: python -m pytest --junitxml=pytest-report.xml
+        run: python -m pytest --junitxml=pytest-report.xml --cov=woningwaardering --cov-report xml:coverage.xml
+
+      - name: Pytest coverage comment
+        uses: MishaKav/pytest-coverage-comment@main
+        with:
+          pytest-xml-coverage-path: coverage.xml
+          junitxml-path: pytest-report.xml
+          create-new-comment: true
+        if: always()
 
       - name: Produce test summary
         uses: test-summary/action@v2
