--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -47,14 +47,16 @@ jobs:
       - name: Run pre-push hooks
         run: pre-commit run --all-files --hook-stage pre-push
 
-      - name: Run pytest with coverage and summary
+      - name: Run pytest with coverage
         run: |
           python -m pytest \
             --junitxml=pytest-report.xml \
             --cov=woningwaardering \
-            --cov-report=term-missing > pytest-coverage.txt
+            --cov-report=
 
-          cat pytest-coverage.txt
+      - name: Add coverage report to job summary
+        run: |
+          python -m coverage report -m > pytest-coverage.txt
 
           {
             echo '## Pytest coverage';
